# parallel_programming_homework

./: .gitignore  Grep_Homework_Question.ipynb  Grep_Homework_Solution.ipynb  Grep_Homework_Solution_Colab.ipynb  README.md  grep copy.cpp  grep-main copy.cpp  grep-main.cpp  grep-sequential.cpp  grep.cpp  grep.h  input_file.txt  input_file5.txt  input_file_long.txt  pyproject.toml  tempCodeRunnerFile.cpp
outputs/: output-correct.txt
src/: grep-main.cpp  grep-sequential.cpp  grep.cpp  grep.h
