[tool.poetry]
name = "parallel-programming-homework"
version = "0.1.0"
description = "Parallel programming course @ Politecnico di Milano homework"
authors = ["Paolo Basso <bassopaolo99@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "parallel_programming_homework"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
